fix: corrected left-alignment issue with a few tech tips on Streaming page

--- a/src/pages/streaming.css
+++ b/src/pages/streaming.css
@@ -26,6 +26,7 @@
 .streaming2 td {
   border: none;
   width: 375px;
+  text-align: center;
 }
 
 .streaming2 ul {
